<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:layout_margin="20dp"

    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/layoutDialog"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:background="@drawable/dialog_background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/textTitle"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:padding="10dp"

            android:textColor="@color/textColor"

            android:textSize="@dimen/_18ssp"

            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle">

            <TextView

                android:id="@+id/textMessage"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/_10sdp"

                android:textColor="@color/textColor"

                android:textSize="@dimen/_14ssp"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button

                    android:id="@+id/buttonAction"

                    android:layout_width="@dimen/_80sdp"

                    android:layout_height="@dimen/_40sdp"

                    android:layout_marginHorizontal="@dimen/_5sdp"

                    android:text="@string/cancel_delete"

                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_8ssp"
                    app:cornerRadius="@dimen/_10sdp" />

                <Button

                    android:id="@+id/buttonAction2"

                    android:layout_width="@dimen/_80sdp"

                    android:layout_height="@dimen/_40sdp"

                    android:layout_marginHorizontal="@dimen/_5sdp"

                    android:text="@string/confirm_delete"

                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_8ssp"
                    app:cornerRadius="@dimen/_10sdp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView

            android:id="@+id/imageIcon"

            android:layout_width="@dimen/_25sdp"

            android:layout_height="@dimen/_25sdp"

            android:layout_marginEnd="@dimen/_10sdp"

            android:contentDescription="@string/app_name"

            app:layout_constraintBottom_toBottomOf="@id/textTitle"

            app:layout_constraintEnd_toEndOf="@+id/textTitle"

            app:layout_constraintTop_toTopOf="@id/textTitle"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>